cambios propuestos en paso 7

--- a/form1.html
+++ b/form1.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
+<html>
   <head>
-    <title></title>
+    <title>Vista HTML 1</title>
   </head>
   <body>
+    <form action="../form-result.php" target="_blank">
+      <p>Ingresa tu nombre completo: <input type="text" name="nombrecompleto"></p>
+      <p>
+        Deja un mensaje:<br>
+        <textarea name="mensaje"></textarea>
+      </p>
+      <input type="submit" value="Enviar la información">
+    </form>
+
   </body>
 </html>
