cambios propuestos en paso 11

--- a/form3.html
+++ b/form3.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
+<html>
   <head>
-    <title></title>
+    <title>Vista HTML 3</title>
   </head>
   <body>
+    <form>
+      Nombre:
+      <br>
+      <input type="text">
+      <br>
+      Edad:
+      <br>
+      <input type="number">
+      <br><br>
+      <input type="submit" value="Enviar datos">
+    </form>git 
   </body>
-</html>
+</html
