--- a/form3.html
+++ b/form3.html
@@ -14,6 +14,6 @@
       <input type="number">
       <br><br>
       <input type="submit" value="Enviar datos">
-    </form>git 
+    </form>
   </body>
 </html
